# document-search

./: README.md  pyproject.toml
src/document_search/commands/: search.py
src/document_search/embedding/: embedding_function.py
