[project]
name = "document-search"
version = "0.1.0"
description = "Search OmniAI's OCR benchmark dataset using text embeddings"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=0.6.3",
    "cohere>=5.14.0",
    "datasets>=3.5.0",
    "diskcache>=5.6.3",
    "gradio>=5.23.1",
    "numpy>=2.2.4",
    "platformdirs>=4.3.7",
    "pytesseract>=0.3.13",
    "rich>=13.9.4",
    "sentence-transformers>=4.0.1",
    "torch>=2.6.0",
    "tqdm>=4.67.1",
    "typer>=0.15.2",
]

[project.scripts]
document-search = "document_search.commands.search:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "ipython>=9.0.2",
]
